syntax = "proto3";
package proto.vox;

message AuthorizationRequest
{
    string login = 1;
    bytes uuid = 2;
}
